@@ -1,5 +1,6 @@
 1.26
     Added mandatory parameter: --provides. If omitted, geninitd will ask user for input.
+    Added monitoring logic by pidfile, without process_name.
 
 1.25
 
